# pico_life

./: CMakeLists.txt  LICENSE  README.md
src/: main.cpp
